--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
+    "jquery": "^3.7.0",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-ion-icon": "^4.0.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.2",
